# advent-of-code-2025

./: .gitignore  Manifest.toml  Project.toml  README.md  justfile  pyproject.toml
src/: AdventOfCode2025.jl
src/advent_of_code_2025/cli/: README.md  _utils.py  main.py  write.py
src/advent_of_code_2025/day_01_secret_entrance/: solution.jl
src/advent_of_code_2025/day_02_gift_shop/: solution.jl
src/advent_of_code_2025/day_03_lobby/: solution.jl
src/advent_of_code_2025/day_04_printing_department/: solution.jl
src/advent_of_code_2025/day_05_cafeteria/: solution.jl
src/advent_of_code_2025/day_06_trash_compactor/: solution.jl
src/advent_of_code_2025/day_07_laboratories/: solution.jl
src/advent_of_code_2025/day_08_playground/: solution.jl
src/advent_of_code_2025/day_09_movie_theater/: solution.jl
src/advent_of_code_2025/utils/: Project.toml  README.md  utils.jl
src/advent_of_code_2025/utils/puzzle/: cli.py  get.py  parser.py  write.py
src/advent_of_code_2025/utils/src/: Utils.jl
